[package]
name = "jazz-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.96"
blake3 = { version = "1.6.0", features = ["rayon", "serde"] }
bs58 = "0.5.1"
chrono = { version = "0.4.40", features = ["serde"] }
crypto = { version = "0.5.1", features = ["signature", "digest"] }
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
pkcs8 = "0.10.2"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_repr = "0.1.19"
